[package]
name = "nsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1" }
rand = "0.9.0-alpha.1"
image = "0.24.9"
winit = "0.29"
bevy_screen_diagnostics = "0.5.0"

[profile.dev.package."*"]
opt-level = 3